Production optimizations: Transaction refactoring, Selenium deduplication, and infrastructure tuning
- Fixed optimistic locking with fast independent transactions (REQUIRES_NEW)
- Added video URL deduplication via Redis (prevents simultaneous clip creation)
- Optimized Selenium: shm_size 4GB, sessions 6, timeouts reduced
- Async driver.quit() with 10s timeout (prevents deadlocks)
- Replaced Thread.sleep with WebDriverWait
- Semaphore reduced to 6 (matches node capacity)
- Port ranges extended for 10-node scaling
- Memory limits increased: Chrome 10GB, Redis 4GB

🎯 Result: Zero optimistic locking, 60% faster with deduplication, production-ready